--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 
-<h1 class=" display-4 mb-3 text-center">{% trans 'bloodmallet' %}</h1>
+<h1 class=" display-4 mb-3 text-center">{% translate 'bloodmallet' %}</h1>
 
 {% comment %}
-<h3>{% trans 'Title' %}: <span id="title">~</span></h3>
+<h3>{% translate 'Title' %}: <span id="title">~</span></h3>
 {% endcomment %}
 
 <div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart_id }}" data-language="{{ LANGUAGE_CODE }}" data-entries="100" data-background-color="transparent"></div>
