--- a/general_website/templates/general_website/error.html
+++ b/general_website/templates/general_website/error.html
@@ -10,7 +10,7 @@
         {% if error.text %}
             {{ error.text }}
         {% else %}
-            {% trans "Unknown error" %}
+            {% translate "Unknown error" %}
         {% endif %}
     </p>
 </div>
