--- a/general_website/templates/general_website/faq.html
+++ b/general_website/templates/general_website/faq.html
@@ -17,7 +17,7 @@
     </p>
     <p>If you enjoy this resource and want to see it continued, there are two options available to do so:</p>
     <a href="https://www.patreon.com/bloodmallet" target="blank">
-    <img src="{% static 'general_website/assets/become_a_patron_button.png' %}" alt="{% trans 'Become a Patron' %}"  height="42" style="vertical-align: text-top;" />
+    <img src="{% static 'general_website/assets/become_a_patron_button.png' %}" alt="{% translate 'Become a Patron' %}"  height="42" style="vertical-align: text-top;" />
     </a>
     <p>or support the project on
     <a href="https://www.paypal.me/bloodmallet" target="blank">PayPal</a>
@@ -113,15 +113,15 @@
     </p>
 </div>-->
 <div class="offset-md-1 col-md-10">
-    <h2 class="faq-question">{% trans "Google Analytics" %}</h2>
+    <h2 class="faq-question">{% translate "Google Analytics" %}</h2>
     <p>
-        {% blocktrans %}
+        {% blocktranslate %}
         bloodmallet.com would like to use <a href="https://support.google.com/analytics/answer/2763052">anonymized</a> <a href="https://marketingplatform.google.com/about/analytics/">Google Analytics (GA)</a>, to know how many people are using the website. You can either accept or reject this. Your choice will be saved on your device in a cookie.
-        {% endblocktrans %}
+        {% endblocktranslate %}
     </p>
     <div class="btn-group float-right">
-        <button type="button" class="btn btn-primary" onclick="acceptGATracking(true)">{% trans "Accept GA tracking" %}</button>
-        <button type="button" class="btn btn-secondary" onclick="acceptGATracking(false)">{% trans "Reject GA tracking" %}</button>
+        <button type="button" class="btn btn-primary" onclick="acceptGATracking(true)">{% translate "Accept GA tracking" %}</button>
+        <button type="button" class="btn btn-secondary" onclick="acceptGATracking(false)">{% translate "Reject GA tracking" %}</button>
     </div>
 </div>
 
