--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav mr-auto">
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'my_charts' %}" id="my_charts_link">{% trans "My Charts" %}</a>
+                <a class="nav-link" href="{% url 'my_charts' %}" id="my_charts_link">{% translate "My Charts" %}</a>
             </li>
             {% endif %}
             </ul>
@@ -26,16 +26,16 @@
             <!-- Settings -->
             <ul class="navbar-nav ml-auto">
                 {% if not request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">{% trans "Login" %}</a>
-                    <a class="nav-link" href="{% url 'signup' %}" id="navbarSignup">{% trans "Register" %}</a>
+                    <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">{% translate "Login" %}</a>
+                    <a class="nav-link" href="{% url 'signup' %}" id="navbarSignup">{% translate "Register" %}</a>
                 {% endif %}
                 {% if request.user.is_authenticated and request.user.is_superuser %}
-                    <a class="nav-link" href="{% url 'compute_api:index' %}" id="navbarSuperuser">{% trans "Superuser" %}</a>
-                    <a class="nav-link" href="{% url 'admin:index' %}" id="navbarAdmin">{% trans "Admin" %}</a>
+                    <a class="nav-link" href="{% url 'compute_api:index' %}" id="navbarSuperuser">{% translate "Superuser" %}</a>
+                    <a class="nav-link" href="{% url 'admin:index' %}" id="navbarAdmin">{% translate "Admin" %}</a>
                 {% endif%}
-                <a class="nav-link" href="{% url 'settings' %}" id="navbarLogin">{% trans "Settings" %}</a>
+                <a class="nav-link" href="{% url 'settings' %}" id="navbarLogin">{% translate "Settings" %}</a>
                 {% if request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'logout' %}" id="navbarLogin">{% trans "Logout" %}</a>
+                    <a class="nav-link" href="{% url 'logout' %}" id="navbarLogin">{% translate "Logout" %}</a>
                 {% endif %}
             </ul>
         </div>
