--- a/general_website/templates/general_website/portals.html
+++ b/general_website/templates/general_website/portals.html
@@ -9,10 +9,10 @@
 
 {% block content %}
 
-<h1 class="display-4 text-center" id="primary_headline">{% trans "Portals" %}</h1>
+<h1 class="display-4 text-center" id="primary_headline">{% translate "Portals" %}</h1>
 
-<p>{% trans "Ever wondered what portals exist in the game? So did I. Here is a list of them. Let me know about more fixed position portals. This list is NOT intended to include teleporting items or skills." %}</p>
-<p>{% trans "And of course Blizzard nuked portals the moment I started building this page. I'm sorry." %}</p>
+<p>{% translate "Ever wondered what portals exist in the game? So did I. Here is a list of them. Let me know about more fixed position portals. This list is NOT intended to include teleporting items or skills." %}</p>
+<p>{% translate "And of course Blizzard nuked portals the moment I started building this page. I'm sorry." %}</p>
 
 {# Faction buttons #}
 <p>
@@ -29,10 +29,10 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>{% trans "Target" %}</th>
-                <th>{% trans "Location" %}</th>
-                <th>{% trans "Coordinates" %}</th>
-                <th>{% trans "More information" %}</th>
+                <th>{% translate "Target" %}</th>
+                <th>{% translate "Location" %}</th>
+                <th>{% translate "Coordinates" %}</th>
+                <th>{% translate "More information" %}</th>
             </tr>
         </thead>
         <tbody>
