--- a/general_website/templates/general_website/privacy_policy.html
+++ b/general_website/templates/general_website/privacy_policy.html
@@ -23,15 +23,15 @@ Haftung bzw. Haftungsausschluss: Geben Sie an, inwiefern Sie für Inhalte auf Ih
 
 Urheber- und Kennzeichenrecht: Erläutern Sie, dass gekennzeichnete Inhalte den Eigentumsrechten der jeweiligen Urheber unterliegen. Die von Ihnen erstellten Inhalte unterliegen Ihrem Urheberrecht und dürfen nicht ohne Einverständnis weiterverwandt werden.
 
-<h2>{% trans "Google Analytics" %}</h2>
+<h2>{% translate "Google Analytics" %}</h2>
 <p>
-    {% blocktrans %}
+    {% blocktranslate %}
     bloodmallet.com would like to use <a href="https://support.google.com/analytics/answer/2763052">anonymized</a> <a href="https://marketingplatform.google.com/about/analytics/">Google Analytics (GA)</a>, to know how many people are using the website. You can either accept or reject this. Your choice will be saved on your device in a cookie.
-    {% endblocktrans %}
+    {% endblocktranslate %}
 </p>
 <div class="btn-group float-right">
-    <button type="button" class="btn btn-primary" onclick="acceptGATracking(true)">{% trans "Accept GA tracking" %}</button>
-    <button type="button" class="btn btn-secondary" onclick="acceptGATracking(false)">{% trans "Reject GA tracking" %}</button>
+    <button type="button" class="btn btn-primary" onclick="acceptGATracking(true)">{% translate "Accept GA tracking" %}</button>
+    <button type="button" class="btn btn-secondary" onclick="acceptGATracking(false)">{% translate "Reject GA tracking" %}</button>
 </div>
 
 
