--- a/general_website/templates/general_website/tears.html
+++ b/general_website/templates/general_website/tears.html
@@ -5,18 +5,18 @@
 
 {% block content %}
 
-<h1 class=" display-4 mb-3 text-center">{% trans 'T-List' %}</h1>
+<h1 class=" display-4 mb-3 text-center">{% translate 'T-List' %}</h1>
 
 <p>
-    {% trans "Everyone's doing a list right now? Here I present my own Tear-List. And I assure you it's highly subjective and different for everyone." %}
+    {% translate "Everyone's doing a list right now? Here I present my own Tear-List. And I assure you it's highly subjective and different for everyone." %}
 </p>
 
 <span class="death_knight-color float-right" style="position: absolute; top: 180px; right: 50px; font-size: 5rem; transform: rotate(45deg); display: inline-block;">wow!</span>
 <p>
-    {% trans "All values are absolutely random and have no meaning." %}
+    {% translate "All values are absolutely random and have no meaning." %}
 </p>
 
-<h3>{% trans 'Specs' %} <span onclick="resetTears();">🍪</span></h3>
+<h3>{% translate 'Specs' %} <span onclick="resetTears();">🍪</span></h3>
 <div id="specs"></div>
 <span class="float-right" style="position: absolute; top: 800px; right: 30%; font-size: 5rem; transform: rotate(180deg); display: inline-block;">🤔</span>
 
