--- a/general_website/templates/allauth/account/account_inactive.html
+++ b/general_website/templates/allauth/account/account_inactive.html
@@ -2,10 +2,10 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Account Inactive" %}{% endblock %}
+{% block head_title %}{% translate "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+<h1>{% translate "Account Inactive" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+<p>{% translate "This account is inactive." %}</p>
 {% endblock %}
