--- a/general_website/templates/allauth/account/password_set.html
+++ b/general_website/templates/allauth/account/password_set.html
@@ -2,14 +2,14 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Set Password" %}{% endblock %}
+{% block head_title %}{% translate "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+    <h1>{% translate "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        <input type="submit" name="action" value="{% translate 'Set Password' %}"/>
     </form>
 {% endblock %}
