--- a/general_website/templates/allauth/socialaccount/authentication_error.html
+++ b/general_website/templates/allauth/socialaccount/authentication_error.html
@@ -2,12 +2,12 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
+{% block head_title %}{% translate "Social Network Login Failure" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
+<h1>{% translate "Social Network Login Failure" %}</h1>
 
-<p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+<p>{% translate "An error occurred while attempting to login via your social network account." %}</p>
 <p>{{ auth_error }}</p>
 <p>Code: {{ auth_error.code }}</p>
 <p>Error: {{ auth_error.exception }}</p>
