--- a/general_website/templates/general_website/layout/head.html
+++ b/general_website/templates/general_website/layout/head.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>bloodmallet - {% trans "data for all" %}</title>
+    <title>bloodmallet - {% translate "data for all" %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{% sass_src 'general_website/css/base.scss' %}" />
     <link rel="shortcut icon" type="image/png" href="{% static 'general_website/favicon.ico' %}"/>
