--- a/general_website/templates/general_website/layout/messages.html
+++ b/general_website/templates/general_website/layout/messages.html
@@ -2,7 +2,7 @@
 
 {% for message in messages %}
     <div class="alert {{ message.tags }} alert-dismissable" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="{% trans 'close' %}">&#215;</button>
+        <button type="button" class="close" data-dismiss="alert" aria-label="{% translate 'close' %}">&#215;</button>
         {{ message }}
     </div>
 {% endfor %}
