--- a/general_website/templates/general_website/layout/nav_bottom.html
+++ b/general_website/templates/general_website/layout/nav_bottom.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarBottomMenu">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
+                    <a class="nav-link" href="{% url 'faq' %}">{% translate "FAQ" %}</a>
                 </li>
                 {% if not user.is_superuser %}
                 <li class="nav-item patron-link">
@@ -17,7 +17,7 @@
                     <svg class="svg-icon">
                         <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#patreon"></use>
                     </svg>
-                    <span style="color: #F96854;">{% trans "Patreon" %}</span>
+                    <span style="color: #F96854;">{% translate "Patreon" %}</span>
                     </a>
                 </li>
                 {% endif %}
@@ -26,7 +26,7 @@
                     <svg class="svg-icon">
                         <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#github"></use>
                     </svg>
-                    <span>{% trans "Report an error" %}</span>
+                    <span>{% translate "Report an error" %}</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -53,13 +53,13 @@
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">{% trans "About" %}</a>
+                    <a class="nav-link" href="{% url 'about' %}">{% translate "About" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'terms_and_conditions' %}">{% trans "Terms and Conditions" %}</a>
+                    <a class="nav-link" href="{% url 'terms_and_conditions' %}">{% translate "Terms and Conditions" %}</a>
                 </li>
                 {% comment %} <li class="nav-item">
-                    <a class="nav-link" href="{% url 'privacy_policy' %}">{% trans "Privacy Policy" %}</a>
+                    <a class="nav-link" href="{% url 'privacy_policy' %}">{% translate "Privacy Policy" %}</a>
                 </li> {% endcomment %}
             </ul>
         </div>
