--- a/general_website/templates/general_website/layout/nav_settings.html
+++ b/general_website/templates/general_website/layout/nav_settings.html
@@ -11,21 +11,21 @@
             <!-- Settings -->
             <ul class="navbar-nav">
 
-                <li class="navbar-text priest-color">{% trans "Settings" %}:</li>
+                <li class="navbar-text priest-color">{% translate "Settings" %}:</li>
                 <li class="nav-item">
-                    <a class="nav-link priest-color priest-menu-border{% if page == 'settings' %} active{% endif %}" href="{% url 'settings' %}">{% trans "General" %}</a>
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'settings' %} active{% endif %}" href="{% url 'settings' %}">{% translate "General" %}</a>
                 </li>
 
                 {# Logged in user menu #}
                 {% if request.user.is_authenticated %}
                 <li class="navbar-text priest-color navbar-spacer">|</li>
                 <li class="nav-item">
-                    <a class="nav-link priest-color priest-menu-border{% if page == 'profile' %} active{% endif %}" href="{% url 'profile' %}">{% trans "Profile" %}</a>
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'profile' %} active{% endif %}" href="{% url 'profile' %}">{% translate "Profile" %}</a>
                 </li>
 
                 <li class="navbar-text priest-color navbar-spacer">|</li>
                 <li class="nav-item">
-                    <a class="nav-link priest-color priest-menu-border{% if page == 'connections' %} active{% endif %}" href="{% url 'account_connections' %}">{% trans "Connections" %}</a>
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'connections' %} active{% endif %}" href="{% url 'account_connections' %}">{% translate "Connections" %}</a>
                 </li>
                 {% endif %}
 
