--- a/general_website/templates/general_website/login.html
+++ b/general_website/templates/general_website/login.html
@@ -10,8 +10,8 @@
 
     {% comment %} Add reset PW link here {% endcomment %}
 
-    <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
-    <small id="dataDisclaimer" class="form-text text-muted">{% trans "I couldn't care less about what you enter. Nothing is shared with others and data is wiped regularly." %}</small>
+    <button type="submit" class="btn btn-primary">{% translate "Login" %}</button>
+    <small id="dataDisclaimer" class="form-text text-muted">{% translate "I couldn't care less about what you enter. Nothing is shared with others and data is wiped regularly." %}</small>
 </form>
 
 {% endblock %}
