--- a/general_website/templates/general_website/terms_and_conditions.html
+++ b/general_website/templates/general_website/terms_and_conditions.html
@@ -2,12 +2,12 @@
 {% load i18n %}
 
 {% block title %}
-{% trans 'Terms and Conditions' %}
+{% translate 'Terms and Conditions' %}
 {% endblock %}
 
 {% block content %}
 
-<h1 class="mt-3 display-4">{% trans 'Terms and Conditions' %}</h1>
+<h1 class="mt-3 display-4">{% translate 'Terms and Conditions' %}</h1>
 
 <p>
 {% url 'about' as about %}
