--- a/general_website/templates/general_website/index.html
+++ b/general_website/templates/general_website/index.html
@@ -51,6 +51,10 @@ For indepth information about your spec use your theorycrafters guides.
 {% endblocktranslate %}
 </p>
 
+<div class="alert alert-info" role="alert">
+    8.3 data can still be found at <a href="https://bfa.bloodmallet.com/">bfa.bloodmallet.com</a>.
+</div>
+
 <div class="alert alert-warning" role="alert">
 <p>{% translate "Warning"|upper %}</p>
     <p>
