update frontpage information

--- a/general_website/templates/general_website/index.html
+++ b/general_website/templates/general_website/index.html
@@ -52,18 +52,17 @@ For indepth information about your spec use your theorycrafters guides.
 </p>
 
 <div class="alert alert-info" role="alert">
-    8.3 data can still be found at <a href="https://bfa.bloodmallet.com/">bfa.bloodmallet.com</a>.
+    8.3 data can be found at <a href="https://bfa.bloodmallet.com/">bfa.bloodmallet.com</a>.
 </div>
 
 <div class="alert alert-warning" role="alert">
 <p>{% translate "Warning"|upper %}</p>
     <p>
     {% blocktranslate %}
-    Pre-raid and Raid character profiles aren't updated across the board in SimulationCraft yet. Therefore <span class="druid-color">standard simulations are disabled</span> until most of those profiles see updates. In the meantime, if you become a patreon, you can create your own chart with your own Beta-Character export. In this case you can start viewing Shadowlands values.<br/><br/>
+    Pre-patch (level 50) simulations are trickling in.<br/>
+    Level 60 simulations are still on hold unless you're a patron and provide your own custom profile for your personalized chart.<br/><br/>
 
-    Still beware of the heavily <span class="druid-color">work in progress</span> states of some specialisation modules in SimulationCraft. A lot might not be implemented, or needs to be updated.<br/><br/>
-
-    <a href="https://github.com/simulationcraft/simc">SimulationCraft</a> is an open source project and is always looking for some help.
+    <a href="https://github.com/simulationcraft/simc">SimulationCraft</a> is an open source project and is always looking for help.
     {% endblocktranslate %}
     </p>
 </div>
