add talent table

--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -10,8 +10,64 @@
 {% comment %}
 <h3>{% translate 'Title' %}: <span id="title">~</span></h3>
 {% endcomment %}
+<div id="meta-group">
+    <div id="meta-info" data-chart-id="meta_{{ chart_id }}" hidden></div>
+    <div id="talent-table" hidden>
+        <p>
+            {% translate "All values in this table are gains." %}
+        </p>
+        <div class="table-responsive">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th scope="row">15</th>
+                        <td id="11">-</td>
+                        <td id="12">-</td>
+                        <td id="13">-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">25</th>
+                        <td id="21">-</td>
+                        <td id="22">-</td>
+                        <td id="23">-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">30</th>
+                        <td id="31">-</td>
+                        <td id="32">-</td>
+                        <td id="33">-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">35</th>
+                        <td id="41">-</td>
+                        <td id="42">-</td>
+                        <td id="43">-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">40</th>
+                        <td id="51">-</td>
+                        <td id="52">-</td>
+                        <td id="53">-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">45</th>
+                        <td id="61">-</td>
+                        <td id="62">-</td>
+                        <td id="63">-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">50</th>
+                        <td id="71">-</td>
+                        <td id="72">-</td>
+                        <td id="73">-</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-<div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart_id }}" data-language="{{ LANGUAGE_CODE }}" data-entries="100" data-background-color="transparent"></div>
+<div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart_id }}" data-language="{{ LANGUAGE_CODE }}" data-entries="10000" data-background-color="transparent"></div>
 
 
 {% endblock %}
