--- a/general_website/static/general_website/css/base.scss
+++ b/general_website/static/general_website/css/base.scss
@@ -431,3 +431,19 @@ select::-ms-expand {
 .faq-question {
     font-weight: 300;
 }
+
+// remove border
+.iconlarge del, .iconmedium del, .iconsmall del {
+    background-image: none!important;
+}
+
+.caret::before {
+    display: inline-block;
+    margin-right: .255em;
+    vertical-align: .255em;
+    content: "";
+    border-top: .3em solid $light-color;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
+}
