enable base variables for wowhead tooltips

--- a/general_website/templates/general_website/layout/wowhead_tooltips.html
+++ b/general_website/templates/general_website/layout/wowhead_tooltips.html
@@ -1,1 +1,16 @@
+<script>
+const whTooltips = {
+    colorLinks: false,
+    //iconizeLinks: false,
+    iconizeLinks: true,
+    //iconSize: "small",
+    iconSize: true,
+    renameLinks: false,
+    hide: {
+        dropchance: true,
+        sellprice: true,
+        maxstack: true
+    }
+};
+</script>
 <script src="https://wow.zamimg.com/widgets/power.js"></script>
